--- a/style.css
+++ b/style.css
@@ -1,44 +1,205 @@
+/* CSS variables */
+:root {
+    --primary: #ddd;
+    --dark: #333;
+    --light: #fff;
+    --shadow: #0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
 html {
-    padding: 0 auto;
-    margin: 0 auto;
-    width: 100% ;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--dark);
 }
 
-header {
-    padding-top: 1%;
-    background-color: darkkhaki;
-    width: 100%;
+body {
+    background: #ccc;
+    margin: 30px 50px;
+    line-height: 1.4;
 }
 
-header h1 {
+.btn {
+    background-color: var(--dark);
+    color: var(--light);
+    padding: 0.6em 1.3rem;
+    text-decoration: none;
+    border: 0;
+}
+
+img {
+    max-width: 100%;
+}
+
+.wrapper {
+    display: grid;
+    grid-gap: 20px;
+}
+
+/* Navigation */
+
+.main-nav ul {
+    display: grid;
+    grid-gap: 20px;
+    padding: 0;
+    list-style: none;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.main-nav a {
+    background: var(--primary);
+    display: block;
+    text-decoration: none;
+    padding: 0.8rem;
     text-align: center;
-    color: darkblue;
+    color: var(--dark);
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    box-shadow: var(--shadow)
 }
 
-header p {
-    padding: 0.5% 5% 2% 5%;
+.main-nav a:hover {
+    background: var(--dark);
+    color: var(--light);
 }
 
-.idea, .idea2 {
-    padding: 1% 5% 2% 5%;
+/* Top container */
+.top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: 
+        'showcase showcase top-box-a'
+        'showcase showcase top-box-b';
 }
 
-.idea li {
-    padding-bottom: 0.5%;
+/* Showcase */
+.showcase {
+    grid-area: showcase;
+    min-height: 400px;
+    background: url(pic1.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    box-shadow: var(--shadow);
 }
 
-.idea2 li {
-    padding-bottom: 0.5%;
+.showcase h1 {
+    font-size: 4rem;
+    margin-bottom: 0;
+    color: var(--light);
 }
 
-.idea {
-    background-color: rgba(185, 185, 185, 0.9)
+.showcase p {
+    font-size: 3rem;
+    margin-top: 0;
+    color: var(--light)
 }
 
-.idea2 {
-    background-color: rgba(51, 102, 0, 0.6);
+/* Top box*/
+
+.top-box {
+    background: var(--primary);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    box-shadow: var(--shadow);
+    padding: 1.5rem;
 }
+
+.top-box .desc {
+    font-size: 2.5rem;
+}
+
+.top-box-a {
+    grid-area: top-box-a;
+}
+
+.top-box-b {
+    grid-area: top-box-b;
+}
+
+/* Boxes */
+.boxes {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.box {
+    background: var(--primary);
+    text-align: center;
+    padding: 1.5rem 2rem;
+    box-sizing: var(--shadow);
+}
+
+/*Info!*/
+.info {
+    background: var(--primary);
+    box-shadow: var(--shadow);
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3rem;
+}
+
+/* Portfolio */
+
+.portfolio {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.portfolio img {
+    width: 100%;
+    box-shadow: var(--shadow);
+}
+
+/*Footer */
 
 footer {
+    margin-top: 2rem;
+    background: var(--dark);
+    color: var(--light);
     text-align: center;
+    padding: 1rem;
+}
+
+/*Media Queries*/
+@media (max-width: 700px) {
+    .top-container {
+        grid-template-areas: 
+        'showcase showcase'
+        'top-box-a top-box-b';
+    }
+
+    .showcase h1 {
+        font-size: 2.5rem;
+    }
+
+    .main-nav ul {
+        grid-template-columns: 1fr;
+    };
+
+    .info {
+        grid-template-columns: 1fr;
+    };
+
+    .info .btn {
+        display: block;
+        text-align: center;
+        margin: auto;
+    }
+}
+
+@media(max-width: 500px) {
+    .top-container {
+        grid-template-areas: 
+        'showcase'
+        'top-box-a'
+        'top-box-b';
+    }
 }
